# libtriton_jit

./:    .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
cmake/: BackendMUSA.cmake  BackendNPU.cmake  FindTorch.cmake
docs/: debugging_index.md  npu_compatibility.md
docs/fixes/: fix_addmm_npu_ub_overflow.md  fix_npu_kernel_name_mismatch_and_pointer_arithmetic.md
docs/fixing/: npu_23ops_full_support.md  npu_mm_workspace_allocation.md
examples/: CMakeLists.txt
examples/arg_handle/: axpy_op.cpp  axpy_op.h  test_axpy.cpp
examples/gemm/: CMakeLists.txt  gemm.py  gemm_op.cpp  gemm_op.h  test_gemm.cpp
examples/matmul/: CMakeLists.txt  mm.py  mm_op.cpp  mm_op.h  test_mm.cpp
examples/pointwise/: CMakeLists.txt  add_cpp_rt_vs_python_rt.py  add_op.cpp  add_triton_cpp_rt.py  test_add.cpp
examples/pointwise_raw/: add_op.cpp
examples/reduce/: CMakeLists.txt  sum_cpp_rt_vs_python_rt.py  sum_op.cpp  sum_op.h  sum_triton_cpp_rt.py  test_sum.cpp
experiments/: CMakeLists.txt  test_dot_npu.py
experiments/npu_min_vector/: CMakeLists.txt  test_min_vector.cpp
include/triton_jit/: backend_config.h  backend_policy.h  jit_utils.h  triton_jit_function.h  triton_jit_function_impl.h  triton_kernel.h  triton_kernel_impl.h
include/triton_jit/backends/: cuda_backend.h  ix_backend.h  musa_backend.h  npu_arg_buffer.h  npu_backend.h  npu_types.h
install/include/triton_jit/: jit_utils.h  triton_jit_function.h  triton_jit_function_impl.h  triton_kernel_impl.h
install/include/triton_jit/backends/: cuda_backend.h  npu_backend.h
install/share/triton_jit/scripts/: standalone_compile.py
operators/: CMakeLists.txt
operators/common/: benchmark_utils.h  report_generator.h  test_framework.cpp  test_framework.h
operators/fusion/apply_rotary_pos_emb/: apply_rotary_pos_emb.py  apply_rotary_pos_emb_op.cpp  apply_rotary_pos_emb_op.h  test_apply_rotary_pos_emb.cpp
operators/fusion/rwkv_ka_fusion/: rwkv_ka_fusion.py  rwkv_ka_fusion_op.cpp  test_rwkv_ka_fusion.cpp
operators/fusion/rwkv_mm_sparsity/: rwkv_mm_sparsity.py  rwkv_mm_sparsity_op.cpp  test_rwkv_mm_sparsity.cpp
operators/index/cat/: cat_op.cpp  test_cat.cpp
operators/index/embedding/: embedding_op.cpp  test_embedding.cpp
operators/index/nonzero/: nonzero_op.cpp  test_nonzero.cpp
operators/index/reshape_and_cache_flash/: reshape_and_cache_flash_op.cpp  reshape_and_cache_flash_op.h  test_reshape_and_cache_flash.cpp
operators/matmul/addmm/: addmm_op.cpp  addmm_op.h  test_addmm.cpp
operators/matmul/bmm/: bmm_op.cpp  test_bmm.cpp
operators/matmul/mm/: mm_op.cpp  mm_simple.py  test_mm.cpp
operators/normalization/fused_add_rms_norm/: fused_add_rms_norm.py  fused_add_rms_norm_op.cpp  fused_add_rms_norm_op.h  test_fused_add_rms_norm.cpp
operators/normalization/rms_norm/: rms_norm.py  rms_norm_op.cpp  test_rms_norm.cpp
operators/normalization/softmax/: softmax.py  softmax_op.cpp  test_softmax.cpp
operators/pointwise/add/: add_op.cpp  add_op.h  test_add.cpp
operators/pointwise/contiguous/: contiguous_op.cpp  test_contiguous.cpp
operators/pointwise/exponential_/: exponential_op.cpp  test_exponential_.cpp
operators/pointwise/fill/: fill_op.cpp  test_fill.cpp
operators/pointwise/fill_/: fill_op.cpp  test_fill_.cpp
operators/pointwise/zeros/: test_zeros.cpp  zeros_op.cpp
operators/reduce/argmax/: argmax.py  argmax_op.cpp  test_argmax.cpp
operators/reduce/max/: max.py  max_op.cpp  test_max.cpp
operators/reduce/sum/: sum.py  sum_op.cpp  test_sum.cpp
operators/reduce/topk/: test_topk.cpp  topk_op.cpp  topk_op.h
reports/: npu_results.json
scripts/: standalone_compile.py
src/: CMakeLists.txt  jit_utils.cpp  kernel_metadata.cpp  triton_jit_function.cpp  triton_jit_function_impl.cpp  triton_kernel.cpp
tests/: run_all_tests.py
